--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,14 +22,14 @@
         </div>
 
         <div class="container mx-auto px-2 mb-2 clearfix header-text">
-          <h1 class="h0 inline-block col-9 sm-width-full py-4 mt-3 header-title">{{ site.name }}</h1>
-
+          <h1 class="h0 inline-block col-8 sm-width-full py-4 mt-3 header-title">{{ site.name }}</h1>
+          <img src="linkedinPhoto.png" style="width:25%;border-radius:50%">
           <div class="clearfix mb-4 py-1">
-            <div class="col-4 sm-width-full left border-top-thin">
+            <div class="col-4 sm-width-full left border-top-thick">
               <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
             </div>
 
-            <div class="col-4 sm-width-full left border-top-thin mt-3 mt-lg-0 ml-lg-4 table">
+            <div class="col-2.1 sm-width-full left border-top-thick mt-3 mt-lg-0 ml-lg-4 table">
                 <div class="inline-block mt-3 mr-1">
                   {% include github.html %}
                 </div>
