Changing homepage, starting hello world post

--- a/_includes/linkedin.html
+++ b/_includes/linkedin.html
@@ -1,4 +1,4 @@
-<a href="https://www.linkedin.com/in/alex-wainger-045414114" title="Connect with me on LinkedIn" class="link-social block">
+<a href="https://www.linkedin.com/in/alex-wainger-045414114" title="Connect with me on LinkedIn" class="link-social block" target="_blank">
 <svg height="50" class="octicon octicon-mark-github header-social" viewBox="0 0 16 16" version="1.1" width="50" aria-hidden="true" style="background-color:fff; border-radius:32px">
   <!-- <circle cx="0" cy="0" r="3" fill="#fff"> -->
   <g transform="translate(3.1,2.5)scale(.024)" >
