--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,4 +1,4 @@
-<a href="https://www.instagram.com/alex.wainger" title="Follow me on Instagram" class="link-social block">
+<a href="https://www.instagram.com/alex.wainger" title="Follow me on Instagram" class="link-social block" target="_blank">
 	<svg height="50" class="header-social" version="1.1" width="50" viewBox="0 0 16 16" aria-hidden="true">
 	<g>
 		<path d="M11.9,5.1c-0.1-0.2-0.2-0.4-0.4-0.6s-0.3-0.3-0.6-0.4C10.8,4,10.5,4,10,3.9c-0.5,0-0.7,0-2,0s-1.5,0-2,0
